<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:background="@drawable/default_background"
             android:layout_height="match_parent">
    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contest_details_label1"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_header"
        />
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contest_details_label2"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_large"
        />
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contest_details_label3"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_header"
        />
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contest_details_label4"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_header"
        />
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contest_details_label5"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_header"
        />
        <Button
                android:id="@+id/contestdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_40"
                android:text="@string/text_btn_contest_full_details"
                android:textColor="@color/golden"
                android:textAllCaps="false"
                android:background="@drawable/button"/>

    </LinearLayout>

</RelativeLayout>