<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/default_background"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_payment_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_40"
            android:text="@string/text_btn_payment_methods"
            android:textColor="@color/golden"
            android:textAllCaps="false"
            android:background="@drawable/button"/>
        <Button
            android:id="@+id/btn_claim_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_40"
            android:text="@string/text_btn_claim_prize"
            android:textColor="@color/golden"
            android:textAllCaps="false"
            android:background="@drawable/button"/>
        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_40"
            android:text="@string/text_btn_logout"
            android:textColor="@color/golden"
            android:textAllCaps="false"
            android:background="@drawable/button"/>

    </LinearLayout>

</RelativeLayout>