<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_60"
            android:src="@drawable/big_money_logo" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_60"
            android:text="@string/sign_in_with_google"
            android:textAlignment="textStart" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_signing_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_60"
            android:paddingTop="@dimen/margin_12"
            android:paddingBottom="@dimen/margin_12"
            facebook:com_facebook_login_text="@string/sign_up_with_facebook" />

        <Button
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_60"
            android:background="@drawable/button"
            android:text="@string/sign_up_with_email"
            android:textAllCaps="false"
            android:textColor="@color/golden" />


        <TextView
            android:id="@+id/text_view_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_8"
            android:clickable="true"
            android:text="@string/already_registered"
            android:textColor="@color/loginsignupbgcolor"
            android:textSize="18dp"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>