<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:background="@drawable/default_background"
             android:layout_height="match_parent">
    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/logo"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_marginRight="@dimen/margin_40"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/big_money_logo"
                android:layout_marginBottom="@dimen/margin_60"/>
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_charles"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_large"
        />
        <TextView
                android:layout_marginTop="@dimen/margin_24"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_header"
        />
        <TextView
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touch_location"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_large"
        />
    </LinearLayout>

</RelativeLayout>