<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@drawable/default_background"
                android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_80"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:orientation="vertical">

        <EditText
                android:id="@+id/inputemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/stremail"
                android:padding="@dimen/padding_10"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_40"
                android:textColorHint="@color/md_black_1000"
                android:textColor="@color/md_black_1000"/>

        <EditText
                android:id="@+id/inputpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/strpassword"
                android:textColorHint="@color/md_black_1000"
                android:textColor="@color/md_black_1000"
                android:inputType="textPassword"
                android:padding="@dimen/padding_10"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
        />
        <Button
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:text="@string/strsignin"
                android:textColor="@color/golden"
                android:textAllCaps="false"
                android:background="@drawable/button"/>
        <TextView
                android:id="@+id/forgetpassword"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_8"
                android:textColor="@color/loginsignupbgcolor"
                android:clickable="true"
                android:textSize="18dp"
                android:text="@string/forgot_password"
                android:visibility="visible"/>

    </LinearLayout>
    <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="@dimen/margin_60"
            android:layout_height="@dimen/margin_60"
            android:id="@+id/progress_bar"
            android:visibility="gone"/>

</RelativeLayout>