<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:background="@drawable/default_background"
             android:layout_height="match_parent">
    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_confirm_payment"
                android:textColor="@color/golden"
                android:textSize="@dimen/text_size_header"
        />
        <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_40"
                android:text="@string/text_confirm"
                android:textColor="@color/golden"
                android:textAllCaps="false"
                android:background="@drawable/button"/>
        <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_40"
                android:text="@string/fui_cancel"
                android:textColor="@color/golden"
                android:textAllCaps="false"
                android:background="@drawable/button"/>
        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_confirm"
                android:textColor="@color/loginsignupbgcolor"
                android:textSize="@dimen/text_size_normal"
        />

    </LinearLayout>

</RelativeLayout>