<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_80"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:inputType="textPersonName"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/strfirstname"
                android:padding="@dimen/padding_10"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000" />

            <EditText
                android:id="@+id/inputlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:inputType="textPersonName"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/strlastName"
                android:padding="@dimen/padding_10"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000" />

            <EditText
                android:id="@+id/inputbirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:background="@drawable/loginedittextbg"
                android:enabled="false"
                android:hint="@string/strbirthday"
                android:padding="@dimen/padding_10"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000"
                android:visibility="gone" />

            <EditText
                android:id="@+id/inputemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:inputType="textEmailAddress"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/fui_idp_name_email"
                android:padding="@dimen/padding_10"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000" />

            <EditText
                android:id="@+id/inputpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/strpassword"
                android:inputType="textPassword"
                android:padding="@dimen/padding_10"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000" />

            <EditText
                android:id="@+id/inputconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:background="@drawable/loginedittextbg"
                android:hint="@string/strconfirmpassword"
                android:inputType="textPassword"
                android:padding="@dimen/padding_10"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000" />

            <Button
                android:id="@+id/btncontinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_40"
                android:background="@drawable/button"
                android:text="@string/strcontinue"
                android:textAllCaps="false"
                android:textColor="@color/golden" />

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_8"
                android:clickable="true"
                android:textColor="@color/loginsignupbgcolor"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/margin_60"
        android:layout_height="@dimen/margin_60"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>